--- a/client/src/compponets/left_css.css
+++ b/client/src/compponets/left_css.css
@@ -36,3 +36,8 @@ button.create_account{
 div h4 a.line{
     color: #838383;
 }
+.create_account:hover {
+    transform: scale(1.1);
+    fill:#f14d54;
+
+}
